--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
-build:
-  command = npm run build
-  publish = /opt/build/repo/public
+[build]
+  command = "npm run build"
+  publish = "/opt/build/repo/public"
