--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prebuild": "nvm install && nvm use"
+    "prebuild": ""
   },
   "eslintConfig": {
     "extends": [
