--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "plugins": [
-    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
-  ],
-  "presets": ["react-app"]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
