--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-    "routes": [
-      { "src": "/registro", "dest": "server.js" }
-    ]
-  }
+  "routes": [{ "src": "/registro", "server": "server.js" }]
+}
