Correção de Conexão com banco de dados 10.0

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "routes": [{ "src": "/registro", "dest": "server.js" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./dist/server.js",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "/dist/server.js" }]
 }
