--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,5 @@
       "use": "@now/node"
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "./src/index.js" },
-    { "src": "/registro", "dest": "./dist/server.js" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "./src/index.js" }]
 }
