--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/index.js",
+      "src": "./dist/server.js",
       "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "./src/index.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "./dist/server.js" }]
 }
