--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,5 @@
       "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "./dist/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/dist/server.js" }]
 }
