--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,16 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "./src/index.js",
-      "use": "@now/node"
-    },
-    {
       "src": "./dist/server.js",
       "use": "@now/node"
     }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/src/index.js" },
-    { "src": "/registro", "dest": "/dist/server.js" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/dist/server.js" }]
 }
