--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,9 +2,9 @@
   "version": 2,
   "builds": [
     {
-      "src": "./dist/server.js",
+      "src": "./server.js",
       "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/dist/server.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/" }]
 }
